Don't put MVEL files under $PRELERT_HOME/config
They should only be under $PRELERT_HOME/cots/elasticsearch/config/scripts


Former-commit-id: 8dd38a3462ad73e03d9d8ece49971cfcc112f34f

Original commit: elastic/x-pack@9d30e45984df6a46147996954ad5d6c17c750dcf

--- a/java/apps/engineApi/pom.xml
+++ b/java/apps/engineApi/pom.xml
@@ -41,6 +41,9 @@
                 <resource>
                   <directory>${basedir}/config</directory>
                   <filtering>true</filtering>
+                  <excludes>
+                    <exclude>elasticsearch_scripts/**</exclude>
+                  </excludes>
                 </resource>
               </resources>
             </configuration>      
