Adding static code analysis capability to the Maven build
Former-commit-id: ebde00388e9c5cee8b567cac65a5e9db392554dc

Original commit: elastic/x-pack@11a584119c95005dc1ed45ac7700d4c37f08f2a6

--- a/java/Makefile
+++ b/java/Makefile
@@ -102,6 +102,9 @@ clean:
 deptree:
 	cd $(ENGINEAPI_BUILD_DIR) && mvn $(MAVEN_ARGS) $(MAVEN_PROPS) dependency:tree
 
+analyze:
+	cd $(ENGINEAPI_BUILD_DIR) && mvn $(MAVEN_ARGS) $(MAVEN_PROPS) site
+
 endif
 ifdef OEM_NAME
 
