--- a/java/apps/engineApi/pom.xml
+++ b/java/apps/engineApi/pom.xml
@@ -15,6 +15,10 @@
   <artifactId>engineAPI</artifactId>
   <packaging>pom</packaging>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <modules>
     <module>engineApi</module>
     <module>apiClient</module>
