Tell the maven dependency report plugin not check if resources are located within a given repository
The checking slows down the 'site' build and prints hundreds of error messages that can be safely ignored. 

Former-commit-id: 209c08b8dba6ad9a5b0c44f935b3d201bd3073dc

Original commit: elastic/x-pack@7239365ade3da9322a922523366d1c8d0ed41cdd

--- a/java/apps/engineApi/pom.xml
+++ b/java/apps/engineApi/pom.xml
@@ -79,12 +79,24 @@
   <reporting>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
         <version>2.5.4</version>
         <configuration>
           <threshold>High</threshold>
           <effort>Default</effort>
+          <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>          
         </configuration>
       </plugin>
     </plugins>
