Adding Sonar to the nightly build process
Former-commit-id: 08cfdab4940a74503ad9cf206dfa15de81f7d173

Original commit: elastic/x-pack@3aa2a4e1a418880c50ab97ffeb80076857e81513

--- a/java/Makefile
+++ b/java/Makefile
@@ -94,10 +94,10 @@ install: compile
 	cd $(ENGINEAPI_BUILD_DIR) && mvn $(MAVEN_ARGS) $(MAVEN_PROPS) -DskipTests=true install 
 
 test:
-	cd $(ENGINEAPI_BUILD_DIR) && mvn $(MAVEN_ARGS) $(MAVEN_PROPS) test
+	cd $(ENGINEAPI_BUILD_DIR) && mvn $(MAVEN_ARGS) $(MAVEN_PROPS) test $(SONAR_MAIN_STEP)
 
 clean:
-	cd $(ENGINEAPI_BUILD_DIR) && mvn $(MAVEN_ARGS) $(MAVEN_PROPS) clean
+	cd $(ENGINEAPI_BUILD_DIR) && mvn $(MAVEN_ARGS) $(MAVEN_PROPS) clean $(SONAR_INIT_STEP)
 
 deptree:
 	cd $(ENGINEAPI_BUILD_DIR) && mvn $(MAVEN_ARGS) $(MAVEN_PROPS) dependency:tree
