--- a/java/apps/engineApi/apiServer/pom.xml
+++ b/java/apps/engineApi/apiServer/pom.xml
@@ -39,7 +39,18 @@
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-jetty-servlet</artifactId>
       <version>2.5.1</version>
-    </dependency>    
+    </dependency>
+    <dependency>
+      <groupId>com.prelert</groupId>
+      <artifactId>engine-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>     
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <scope>provided</scope>
+    </dependency>
+        
   </dependencies>
 
 
