--- a/java/apps/engineApi/pom.xml
+++ b/java/apps/engineApi/pom.xml
@@ -126,13 +126,22 @@
       <artifactId>jackson-databind</artifactId>      
       <version>2.2.3</version>
     </dependency>
-
+	<dependency>
+	  <groupId>org.elasticsearch</groupId>
+	  <artifactId>elasticsearch</artifactId>
+	  <version>1.2.3</version>
+	  <scope>provided</scope>
+	</dependency>   
+      
       <!-- Prelert modules -->
       <dependency>
         <groupId>com.prelert</groupId>
         <artifactId>engine-api</artifactId>
         <version>1.2.0</version>
       </dependency>
+      
+   
+      
     </dependencies>
   </dependencyManagement>
 
